Replace search message to placeholder, modified MyLibraryManagementActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyLibraryActivity"
-            android:label="@string/title_activity_my_library"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".BookSearch"
             android:label="@string/title_activity_book_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MyLibraryManagementActivity"
+            android:label="@string/title_activity_my_library_management"></activity>
     </application>
 
 </manifest>
