--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 23 21:46:18 KST 2017
-sdk.dir=D\:\\Android\\sdk
+#Wed Jun 21 18:32:58 KST 2017
+sdk.dir=C\:\\Users\\gxicx\\AppData\\Local\\Android\\Sdk
