--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,16 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MyLibraryManagementActivity"
-            android:label="@string/title_activity_my_library_management"></activity>
+            android:label="@string/title_activity_my_library_management" />
+        <activity
+            android:name=".ReservationBookActivity"
+            android:label="@string/title_activity_reservation_book" />
+        <activity
+            android:name=".ReservedBookActivity"
+            android:label="@string/title_activity_reserved_book" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
