--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kjw.mylibrary">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,6 +26,10 @@
             android:name=".BookSearch"
             android:label="@string/title_activity_book_search"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
+
+
+
 
 </manifest>
