--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 21 18:32:58 KST 2017
-sdk.dir=C\:\\Users\\gxicx\\AppData\\Local\\Android\\Sdk
+#Thu Jun 22 23:25:30 KST 2017
+sdk.dir=C\:\\Users\\Family\\AppData\\Local\\Android\\Sdk
