--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,12 +37,16 @@
         <activity
             android:name=".GroupstudyroomActivity"
             android:label="그룹스터디룸 예약" />
+
         <activity
             android:name=".BookDetailActivity"
             android:label="@string/title_activity_book_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RentedBookDetailActivity" />
-        <activity android:name=".ReservedBookDetailActivity"></activity>
+        <activity android:name=".ReservedBookDetailActivity" />
+        <activity
+            android:name=".ReservedGsrActivity"
+            android:label="그룹스터디룸 예약" />
     </application>
 
 </manifest>
