--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 24 16:12:33 KST 2017
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Mon Jun 26 09:47:04 KST 2017
+sdk.dir=C\:\\Users\\Family\\AppData\\Local\\Android\\Sdk
