--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 22 23:25:30 KST 2017
-sdk.dir=C\:\\Users\\Family\\AppData\\Local\\Android\\Sdk
+#Mon Jun 26 02:35:23 KST 2017
+sdk.dir=D\:\\PROG\\AndSDK
